fixed form submit button overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,6 @@ nav a.active {
 
 .report-item .status {
   font-weight: bold;
-  /* padding: 3px 8px; */
   border-radius: 4px;
 }
 
@@ -196,6 +195,28 @@ nav a.active {
   opacity: 1;
 }
 
+input, textarea, fieldset {
+  border-radius: 4px;
+  border: 1px solid #666;
+  padding: 5px;
+}
+
+fieldset {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+input[type="radio"] {
+  width: 15px;
+  height: 15px; 
+  border-radius: 50%; 
+}
+
+input:focus, select:focus, textarea:focus {
+  border-color: #007bff; 
+  outline: none;
+}
+
 input[type="text"],
 textarea,
 button {
@@ -262,7 +283,7 @@ button:hover {
   }
 
   #report-form {
-    height: 275px;
+    height: auto;
   }
 
   #footer p {
